Got rid of width attribute on .aside-tabs to correct misalignment

--- a/style.css
+++ b/style.css
@@ -251,7 +251,6 @@ aside {
 .aside-tabs {
   display: flex;
   flex-direction: row;
-  width: 300px;
   margin-bottom: 3px;
 }
 
